[tool.poetry]
name = "hcml-project"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
lime = "^0.2.0.1"
shap = "^0.45.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
pygments = "^2.18.0"
torch = "^2.3.1"
captum = "^0.7.0"
tensorflow = "^2.16.1"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
